# AI-News-Analyzer

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_add_summary_cross_source_fields.py
app/: main.py
app/agents/: graph.py  research_graph.py  state.py
app/agents/nodes/: approval.py  architecture_diagram.py  arxiv_utils.py  benchmark_chart.py  credibility.py  db_persist.py  figure_quality.py  full_text.py  image_gen.py  linkedin_gen.py  manual_papers.py  paper_ranker.py  pdf_cache.py  prior_art.py  research_carousel.py  scraper.py  screenshot_utils.py  summarizer.py  svg_gauge.py  text_budget.py  text_utils.py
app/api/v1/: deps.py
app/api/v1/routes/: approvals.py  health.py  runs.py
app/core/: config.py  logging.py  security.py
app/models/: database.py  models.py
app/schemas/: schemas.py
app/services/: email_service.py  image_service.py  linkedin_service.py
app/templates/: carousel_slide.html  news_card.html  newsletter.mjml  prior_art_card.html  research_card.html  research_carousel_slide.html
cron/: research_trigger.py  trigger.py
data/: manual_papers.json
tests/: conftest.py
tests/unit/: test_api.py  test_benchmark_chart.py  test_core.py  test_figure_quality.py  test_fixes.py  test_full_text.py  test_image_gen.py  test_research_pipeline.py  test_text_budget.py  test_text_utils.py
